Fixed: Overflow tags at latest news in Blog page

--- a/src/styles/pages/Blog.css
+++ b/src/styles/pages/Blog.css
@@ -121,6 +121,13 @@
   width: 100%;
   margin-bottom: 1.5rem;
   display: flex;
+  overflow: auto;
+  scrollbar-width: none;
+}
+
+#blog-page > .latests-news > .article > .text-box > .tags::-webkit-scrollbar{
+  width: 0;
+  height: 0;
 }
 
 #blog-page > .latests-news > .article > .text-box > .tags > .tag{
